--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +25,14 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.comp-body {
+  max-width: 425px;
+}
+
+.error-alert {
+  margin-top: 10px;
 }
 
 @keyframes App-logo-spin {
